feat: streamline user settings (#257)
Improve labels, groups, and sorting

--- a/lsp/schemas/user-settings.json
+++ b/lsp/schemas/user-settings.json
@@ -76,55 +76,6 @@
       "default": false,
       "description": "Use short names for workspace symbols in completion"
     },
-    "cds.contributions.enablement.additionalAnalyticalAnnotations": {
-      "category": "Contributions",
-      "label": "Additional Analytical Annotations",
-      "type": "boolean",
-      "default": false,
-      "description": "Provide support for additional annotations used CAP Embedded Analytics\n\nSee [capire](https://cap.cloud.sap/docs) for details"
-    },
-    "cds.contributions.features.completion": {
-      "category": "Contributions",
-      "label": "Completion Support",
-      "type": "boolean",
-      "default": true,
-      "description": "Enable completion support from contributions"
-    },
-    "cds.contributions.features.diagnostics": {
-      "category": "Contributions",
-      "label": "Diagnostics Support",
-      "type": "boolean",
-      "default": false,
-      "description": "Enable diagnostics support from contributions"
-    },
-    "cds.contributions.features.hover": {
-      "category": "Contributions",
-      "label": "Hover Support",
-      "type": "boolean",
-      "default": true,
-      "description": "Enable hover support from contributions"
-    },
-    "cds.contributions.features.index": {
-      "category": "Contributions",
-      "label": "Index Support",
-      "type": "boolean",
-      "default": false,
-      "description": "Enable index support from contributions"
-    },
-    "cds.contributions.enablement.odata": {
-      "category": "Contributions",
-      "label": "OData",
-      "type": "boolean",
-      "default": true,
-      "description": "Provide extended annotation support for OData"
-    },
-    "cds.contributions.features.quickFixes": {
-      "category": "Contributions",
-      "label": "Quick Fixes Support",
-      "type": "boolean",
-      "default": false,
-      "description": "Enable quick fixes support from contributions"
-    },
     "cds.contributions.registry": {
       "category": "Contributions",
       "label": "Registry",
@@ -132,9 +83,66 @@
       "default": "https://registry.npmjs.org",
       "description": "NPM registry to be used for installation/update of contributions (e.g. OData annotation support)"
     },
+    "cds.contributions.enablement.additionalAnalyticalAnnotations": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "Additional Analytical Annotations",
+      "type": "boolean",
+      "default": false,
+      "description": "Provide support for additional annotations used CAP Embedded Analytics\n\nSee [capire](https://cap.cloud.sap/docs) for details"
+    },
+    "cds.contributions.features.completion": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "Completion",
+      "type": "boolean",
+      "default": true,
+      "description": "Enable completion support from contributions"
+    },
+    "cds.contributions.features.diagnostics": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "Diagnostics",
+      "type": "boolean",
+      "default": false,
+      "description": "Enable diagnostics support from contributions"
+    },
+    "cds.contributions.features.hover": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "Hover",
+      "type": "boolean",
+      "default": true,
+      "description": "Enable hover support from contributions"
+    },
+    "cds.contributions.features.index": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "Index",
+      "type": "boolean",
+      "default": false,
+      "description": "Enable index support from contributions"
+    },
+    "cds.contributions.enablement.odata": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "OData",
+      "type": "boolean",
+      "default": true,
+      "description": "Provide extended annotation support for OData"
+    },
+    "cds.contributions.features.quickFixes": {
+      "category": "Contributions",
+      "group": "Features",
+      "label": "Quick Fixes",
+      "type": "boolean",
+      "default": false,
+      "description": "Enable quick fixes support from contributions"
+    },
     "cds.contributions.features.semanticHighlighting": {
       "category": "Contributions",
-      "label": "Semantic Highlighting Support",
+      "group": "Features",
+      "label": "Semantic Highlighting",
       "type": "boolean",
       "default": false,
       "description": "Enable semantic highlighting support from contributions"
@@ -158,19 +166,19 @@
       "type": "boolean",
       "default": false
     },
-    "cds.semanticHighlighting.odata.enabled": {
-      "category": "Editor",
-      "label": "OData Semantic Highlighting",
-      "type": "boolean",
-      "default": false,
-      "description": "Semantic highlighting for OData annotations"
-    },
     "cds.semanticHighlighting.enabled": {
       "category": "Editor",
       "label": "Semantic Highlighting",
       "type": "boolean",
       "default": false,
       "description": "Semantic highlighting of certain identifiers"
+    },
+    "cds.semanticHighlighting.odata.enabled": {
+      "category": "Editor",
+      "label": "OData Semantic Highlighting",
+      "type": "boolean",
+      "default": false,
+      "description": "Semantic highlighting for OData annotations"
     },
     "cds.quickfix.importArtifact": {
       "category": "Editor",
@@ -221,13 +229,6 @@
       "default": false,
       "description": "Find same string constants via _References_ command"
     },
-    "cds.typeGenerator.command": {
-      "category": "Type Generator",
-      "label": "Command",
-      "type": "string",
-      "default": "${typerBinary} \"${targetFile}\" --outputDirectory \"${outputDirectory}\"",
-      "description": "The command that is executed when generating model types. You can use the following variables in your command template:\n\n- `${typerBinary}`: the binary\n- `${targetFile}`: the file that is being typed\n- `${outputDirectory}`: the directory into which the type information is generated"
-    },
     "cds.typeGenerator.enabled": {
       "category": "Type Generator",
       "label": "Enabled",
@@ -241,6 +242,13 @@
       "type": "boolean",
       "default": true
     },
+    "cds.typeGenerator.command": {
+      "category": "Type Generator",
+      "label": "Command",
+      "type": "string",
+      "default": "${typerBinary} \"${targetFile}\" --outputDirectory \"${outputDirectory}\"",
+      "description": "The command that is executed when generating model types. You can use the following variables in your command template:\n\n- `${typerBinary}`: the binary\n- `${targetFile}`: the file that is being typed\n- `${outputDirectory}`: the directory into which the type information is generated"
+    },
     "cds.typeGenerator.outputPath": {
       "category": "Type Generator",
       "label": "Output Path",
@@ -248,29 +256,29 @@
       "default": "@cds-models",
       "description": "Directory that serves as root for the generated type definitions. Relative to the project's root"
     },
-    "cds.workspace.persistency.garbageCollectOrphanedIndexesAfterNSaves": {
+    "cds.workspace.persistency.enabled": {
       "category": "Workspace",
       "group": "Persistency",
-      "label": "Garbage Collect After N Saves",
-      "type": "number",
-      "default": 20,
-      "description": "Garbage collect orphaned indexes after N saves (0 = disabled)"
+      "label": "Persistency Enabled",
+      "type": "boolean",
+      "default": false,
+      "description": "Enable workspace index persistency"
     },
-    "cds.workspace.persistency.garbageCollectOrphanedIndexesAfterStartup": {
+    "cds.workspace.persistency.restoreAfterStartup": {
       "category": "Workspace",
       "group": "Persistency",
-      "label": "Garbage Collect After Startup",
+      "label": "Restore After Startup",
+      "type": "boolean",
+      "default": false,
+      "description": "Restore workspace index after startup"
+    },
+    "cds.workspace.persistency.restoreBeforeCompile": {
+      "category": "Workspace",
+      "group": "Persistency",
+      "label": "Restore Before Compile",
       "type": "boolean",
       "default": true,
-      "description": "Garbage collect orphaned indexes after startup"
-    },
-    "cds.workspace.persistency.indexAllAfterStartup": {
-      "category": "Workspace",
-      "group": "Persistency",
-      "label": "Index All After Startup",
-      "type": "boolean",
-      "default": true,
-      "description": "Index all files after startup"
+      "description": "Restore workspace index before compilation"
     },
     "cds.workspace.persistency.persistAfterCompile": {
       "category": "Workspace",
@@ -288,13 +296,13 @@
       "default": true,
       "description": "Persist workspace index after save"
     },
-    "cds.workspace.persistency.enabled": {
+    "cds.workspace.persistency.indexAllAfterStartup": {
       "category": "Workspace",
       "group": "Persistency",
-      "label": "Persistency Enabled",
+      "label": "Index All After Startup",
       "type": "boolean",
-      "default": false,
-      "description": "Enable workspace index persistency"
+      "default": true,
+      "description": "Index all files after startup"
     },
     "cds.workspace.persistency.reindexAfterCompileIfRestored": {
       "category": "Workspace",
@@ -304,21 +312,21 @@
       "default": false,
       "description": "Reindex workspace after compilation if index was restored"
     },
-    "cds.workspace.persistency.restoreAfterStartup": {
+    "cds.workspace.persistency.garbageCollectOrphanedIndexesAfterStartup": {
       "category": "Workspace",
       "group": "Persistency",
-      "label": "Restore After Startup",
-      "type": "boolean",
-      "default": false,
-      "description": "Restore workspace index after startup"
-    },
-    "cds.workspace.persistency.restoreBeforeCompile": {
-      "category": "Workspace",
-      "group": "Persistency",
-      "label": "Restore Before Compile",
+      "label": "Garbage Collect After Startup",
       "type": "boolean",
       "default": true,
-      "description": "Restore workspace index before compilation"
+      "description": "Garbage collect orphaned indexes after startup"
+    },
+    "cds.workspace.persistency.garbageCollectOrphanedIndexesAfterNSaves": {
+      "category": "Workspace",
+      "group": "Persistency",
+      "label": "Garbage Collect After N Saves",
+      "type": "number",
+      "default": 20,
+      "description": "Garbage collect orphaned indexes after N saves (0 = disabled)"
     },
     "cds.workspace.scanCsn": {
       "category": "Workspace",
