ci: include gradle-wrapper.properties in PR trigger paths

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,6 +9,7 @@ on:
       - gradle.properties
       - local.properties
       - .github/**
+      - gradle/wrapper/gradle-wrapper.properties
   workflow_dispatch:
 
 concurrency:
