ci: make gradlew executable in gradle-run action
Mitigate removal of executable bit by dependabot

--- a/.github/actions/gradle-run/action.yml
+++ b/.github/actions/gradle-run/action.yml
@@ -29,6 +29,10 @@ runs:
         distribution: zulu
         java-version: 21
 
+    - name: Make gradlew executable
+      shell: bash
+      run: chmod +x gradlew
+
     - name: Test
       if: ${{ contains(inputs.steps, 'test') }}
       shell: bash
